# image-man

./: .gitignore  Dockerfile  README.md  bot.py  config.py  image-man.service  log.py  pyproject.toml  requirements.txt  start.sh
cogs/: color.py  eval.py  lqr.py  utility.py
plays/: imagebot-deploy.yaml  inventory.yaml
plays/templates/: image-man.service.j2
